--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@types/node": "^12.19.16",
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.8",
+    "cypress": "^6.4.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "msw": "^0.26.1",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -23,13 +26,28 @@
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
     "mutation-test": "stryker run",
+    "e2e-tests": "npm-run-all -p -r start e2e-tests-without-server",
+    "e2e-tests-without-server": "cypress run --browser chromium",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "plugins": [
+      "cypress"
+    ],
+    "rules": {
+      "cypress/no-assigning-return-values": "error",
+      "cypress/no-unnecessary-waiting": "error",
+      "cypress/assertion-before-screenshot": "warn",
+      "cypress/no-force": "warn",
+      "cypress/no-async-tests": "error"
+    },
+    "env": {
+      "cypress/globals": true
+    }
   },
   "browserslist": {
     "production": [
